--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -385,19 +385,54 @@
             />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Para aceitar ou negar este convite, clique nos botões no inferior da tela."
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_gravity="center"
-            android:textSize="14sp"
-            android:layout_marginBottom="10dp"
-            android:maxLines="2"
-            android:ellipsize="middle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status do Convite:"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center"
+                android:textSize="12sp"
+                android:layout_marginBottom="10dp"
+                android:maxLines="2"
+                android:ellipsize="middle"
             />
+
+            <LinearLayout
+                    android:id="@+id/linearStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center">
+
+                <ImageView
+                        android:id="@+id/icStatus"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_error"
+                        android:layout_marginEnd="5dp"
+                        app:tint="@color/red"
+                        android:layout_gravity="center"/>
+
+
+                <TextView
+                        android:id="@+id/txtStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Este convite foi negado"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:maxLines="2"
+                        android:ellipsize="middle"
+                        android:textColor="?android:attr/textColorPrimary"
+                        />
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
